--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,19 +1,14 @@
 /* Настройка вьюпорта */
 $panel-width: 320px;
-$tablet-mini-width: 480px;
 $tablet-width: 768px;
 $desktop-width: 1170px;
 
 /* Настройка текстовых параметров */
 $default-font: "ProximaNova", "Arial", sans-serif;
+$title-font: "RuslanDisplay", "Arial", sans-serif;
 
 /* Цвета сайта */
-
-$light-color: #ffffff;
+$light-color: #f3f1f4;
 $darktext-color: #282828;
 $dark-color: #181818;
 $gray-color: #787878;
-$teal-color: #057d7d;
-$tealgray-color: #5c7979;
-$palegolden-color: #ccc039;
-$beige-color: #6d6a48;
