--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ Theme Name: Food-Diabetes
 Theme URI: foods-diabetes/
 Description: Лэндинг для социального проекта
 Author: Ольга
-Author URI: foods-diabeteszalman-group/
+Author URI: foods-diabetes/
 Version: 1.0
 */
 /* stylelint-disable */
@@ -406,7 +406,6 @@ template {
 
 @font-face {
   font-family: "RuslanDisplay";
-  font-weight: 400;
   font-style: normal;
   src: url("../fonts/ruslandisplay.woff2") format("woff2"), url("../fonts/ruslandisplay.woff") format("woff"); }
 
@@ -454,11 +453,335 @@ ul {
   clip: rect(0 0 0 0);
   overflow: hidden; }
 
+.header {
+  width: 100%;
+  min-height: 800px;
+  background-image: url("../images/bg_header.jpg");
+  background-repeat: no-repeat;
+  background-size: auto; }
+
+.header__panel {
+  width: 320px;
+  margin: 0 auto;
+  padding: 35px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  @media (min-width: 768px) {
+    .header__panel {
+      width: 768px; } }
+  @media (min-width: 1170px) {
+    .header__panel {
+      width: 1170px; } }
+
+.header__menu {
+  margin-left: auto; }
+
+.header__title {
+  margin-top: 78px;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 72px;
+  line-height: 60px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #f3f1f4;
+  text-align: center; }
+
+.header__intro {
+  width: 900px;
+  min-height: 202px;
+  margin: 0 auto;
+  color: #f3f1f4;
+  font-family: "ProximaNova", "Arial", sans-serif;
+  font-size: 30px;
+  line-height: 45px;
+  letter-spacing: 0.8px;
+  text-align: center; }
+
+.menu {
+  min-height: 50px;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.menu-item {
+  margin: 0 11px;
+  font-size: 24px;
+  line-height: 60px;
+  font-weight: 400; }
+
+.menu-item a {
+  color: #f3f1f4; }
+  .menu-item a:hover {
+    color: rgba(255, 255, 255, 0.6); }
+  .menu-item a:active {
+    color: rgba(255, 255, 255, 0.3); }
+
+.about {
+  width: 100%;
+  min-height: 260px;
+  padding-top: 45px;
+  background-color: #ffffff; }
+
+.about__title {
+  margin: 0 auto;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 60px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #282828;
+  text-align: center; }
+
+.about__text {
+  width: 945px;
+  min-height: 185px;
+  margin: 0 auto;
+  color: #282828;
+  font-family: "ProximaNova", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.3px;
+  text-align: center; }
+
+.tasks {
+  width: 100%;
+  min-height: 1023px;
+  margin-top: -125px;
+  background-image: url("../images/bg_content1.jpg");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: top; }
+
+.tasks__container {
+  width: 320px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  padding-top: 240px; }
+  @media (min-width: 768px) {
+    .tasks__container {
+      width: 768px; } }
+  @media (min-width: 1170px) {
+    .tasks__container {
+      width: 1170px; } }
+
+.tasks__title {
+  margin-bottom: 0;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 60px;
+  letter-spacing: 1.3px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: left; }
+
+.tasks__intro,
+.tasks__text,
+.tasks__problem,
+.tasks__name {
+  margin: 0;
+  padding-left: 0;
+  font-family: "ProximaNova", "Arial", sans-serif;
+  font-size: 24px;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+  text-align: left; }
+
+.tasks__intro {
+  line-height: 40px;
+  letter-spacing: 0.6px; }
+
+.tasks__list {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 150px;
+  line-height: 150px;
+  color: rgba(255, 255, 255, 0.2);
+  list-style-type: none;
+  /* Убираем исходные маркеры */
+  _list-style-type: decimal;
+  /* Нумерация для браузера Internet Эксплорер */
+  counter-reset: item;
+  /* Обнуляем счетчик списка */ }
+
+.tasks__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .tasks__item::before {
+    width: 83px;
+    padding-top: 8px;
+    content: counter(item);
+    counter-increment: item;
+    /* Задаем имя счетчика */ }
+
+.tasks__problem {
+  padding-left: 17px;
+  max-width: 755px; }
+
+.tasks__text {
+  font-size: 18px;
+  margin-top: 15px; }
+
+.tasks__name {
+  font-weight: 700;
+  padding-right: 5px; }
+
+.partner {
+  background-color: #ffffff; }
+
+.partner__title {
+  margin: 0 auto;
+  padding-top: 15px;
+  padding-bottom: 23px;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 60px;
+  letter-spacing: 1.8px;
+  text-transform: uppercase;
+  color: #282828;
+  text-align: center; }
+
+.swiper-container--1 {
+  width: 1140px;
+  height: 100px;
+  padding-left: 40px;
+  padding-right: 40px;
+  background-color: #ffffff; }
+
+.swiper-slide--slide1, .swiper-slide--slide2, .swiper-slide--slide3, .swiper-slide--slide4 {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center; }
+
+.swiper-slide--slide1 {
+  background-image: url("../images/auchan.jpg"); }
+
+.swiper-slide--slide2 {
+  background-image: url("../images/multiplex.jpg"); }
+
+.swiper-slide--slide3 {
+  background-image: url("../images/eurovision.jpg"); }
+
+.swiper-slide--slide4 {
+  background-image: url("../images/yarich.jpg"); }
+
+.swiper-button-next--1 {
+  right: 0; }
+
+.swiper-button-prev--1 {
+  left: 0; }
+
+.ideas {
+  width: 100%;
+  margin-top: -81px;
+  background-image: url("../images/bg_content2.jpg");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: top; }
+
+.ideas__container {
+  width: 320px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  padding-top: 230px; }
+  @media (min-width: 768px) {
+    .ideas__container {
+      width: 768px; } }
+  @media (min-width: 1170px) {
+    .ideas__container {
+      width: 1170px; } }
+
+.ideas__title {
+  margin-bottom: 0;
+  margin-right: 65px;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 60px;
+  letter-spacing: 1.3px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: right; }
+
+.swiper-container--2 {
+  width: 1170px;
+  height: auto;
+  background-color: transparent; }
+
+.swiper-slide--text {
+  width: 685px;
+  margin-left: auto;
+  padding-right: 100px;
+  text-align: right;
+  background: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  color: #ffffff; }
+
+.ideas__author {
+  margin: 20px 0 0;
+  font-size: 24px;
+  line-height: 40px;
+  letter-spacing: 0.6px; }
+
+.ideas__text {
+  margin: 0 0 20px;
+  font-size: 18px;
+  line-height: 22px; }
+
+.swiper-container--4 {
+  width: 600px;
+  height: 300px; }
+
+.swiper-slide--text {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
 /* @import "content";
-@import "header";
-@import "menu";
-@import "service";
-@import "portfolio";
 @import "slider";
 @import "order";
 @import "footer";
