--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@ Theme Name: Food-Diabetes
 Theme URI: foods-diabetes/
 Description: Лэндинг для социального проекта
 Author: Ольга
-Author URI: foods-diabeteszalman-group/
+Author URI: foods-diabetes/
 Version: 1.0
 */
 
@@ -11,11 +11,14 @@ Version: 1.0
 @import "variables";
 @import "fonts";
 @import "scaffolding";
-/* @import "content";
 @import "header";
 @import "menu";
-@import "service";
-@import "portfolio";
+@import "about";
+@import "tasks";
+@import "partner";
+@import "ideas";
+@import "slider";
+/* @import "content";
 @import "slider";
 @import "order";
 @import "footer";
