--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,9 +17,10 @@ Version: 1.0
 @import "tasks";
 @import "partner";
 @import "ideas";
-@import "slider";
-/* @import "content";
-@import "slider";
-@import "order";
-@import "footer";
+@import "team";
+@import "stat";
+@import "result";
+@import "contacts";
+@import "form";
+/*@import "footer";
 @import "social"; */
