--- a/css/style.css
+++ b/css/style.css
@@ -711,6 +711,7 @@ ul {
 
 .ideas {
   width: 100%;
+  min-height: 1167px;
   margin-top: -81px;
   background-image: url("../images/bg_content2.jpg");
   background-repeat: no-repeat;
@@ -755,6 +756,10 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
@@ -764,25 +769,290 @@ ul {
   margin: 20px 0 0;
   font-size: 24px;
   line-height: 40px;
+  font-weight: 700;
   letter-spacing: 0.6px; }
 
 .ideas__text {
   margin: 0 0 20px;
   font-size: 18px;
-  line-height: 22px; }
+  line-height: 22px;
+  font-weight: 700; }
+
+.ideas__link {
+  margin: 23px 55px 0 auto;
+  margin-right: 55px;
+  display: block;
+  padding-top: 18px;
+  text-align: center;
+  width: 288px;
+  min-height: 70px;
+  font-size: 24px;
+  color: #ffffff;
+  font-weight: 700;
+  letter-spacing: 0.6px;
+  border: 2px solid #ffffff;
+  background-color: transparent; }
+  .ideas__link:hover {
+    color: #000000;
+    background-color: #ffffff; }
+  .ideas__link:active {
+    opacity: 0.6; }
+
+.team {
+  width: 100%;
+  min-height: 500px;
+  margin: 0;
+  padding-top: 25px;
+  padding-bottom: 70px;
+  background-color: #ffffff; }
+
+.team__container {
+  width: 320px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto; }
+  @media (min-width: 768px) {
+    .team__container {
+      width: 768px; } }
+  @media (min-width: 1170px) {
+    .team__container {
+      width: 1170px; } }
+
+.team__title {
+  margin: 0 auto 50px;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 60px;
+  letter-spacing: 1.3px;
+  text-transform: uppercase;
+  color: #000000;
+  text-align: center; }
+
+.swiper-slide--member {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.team__name {
+  margin: 13px 0 0;
+  font-size: 26px;
+  font-weight: 700;
+  color: #000000; }
+
+.team__post {
+  font-size: 18px;
+  font-weight: 400;
+  color: #000000; }
+
+.swiper-button-prev--3,
+.swiper-button-next--3 {
+  top: 40%; }
+
+.stat {
+  width: 100%;
+  min-height: 275px;
+  margin: 0;
+  background-image: url("../images/bg_stat.jpg");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: top; }
+
+.stat__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 320px;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin: 0 auto; }
+  @media (min-width: 768px) {
+    .stat__list {
+      width: 768px; } }
+  @media (min-width: 1170px) {
+    .stat__list {
+      width: 1170px; } }
+
+.stat__item {
+  width: 205px;
+  padding-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start; }
+
+.stat__value {
+  margin-top: 20px;
+  margin-bottom: 0;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 40px;
+  color: #ffffff; }
+
+.stat__description {
+  font-size: 16px;
+  color: #ffffff;
+  padding: 0;
+  text-align: center; }
+
+.result {
+  width: 100%;
+  min-height: 670px;
+  margin: 0;
+  padding-top: 25px;
+  padding-bottom: 70px;
+  background-color: #ffffff; }
+
+.result__title {
+  margin: 0 auto 50px;
+  padding-top: 75px;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 48px;
+  letter-spacing: 1.3px;
+  text-transform: uppercase;
+  color: #000000;
+  text-align: center; }
 
 .swiper-container--4 {
-  width: 600px;
-  height: 300px; }
+  margin: 0 auto;
+  width: 1170px;
+  height: 467px; }
 
-.swiper-slide--text {
+.swiper-slide--restaurant {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.result__description {
+  width: 585px;
+  height: 467px;
+  padding: 60px 100px;
+  background-color: #000000;
+  color: #ffffff; }
+
+.result__name {
+  margin: 0;
+  font-size: 36px;
+  font-family: "RuslanDisplay", "Arial", sans-serif; }
+
+.result__text {
+  margin: 12px 0 24px;
+  padding: 0;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left; }
+
+.result__link {
+  font-size: 18px;
+  font-weight: 300;
+  color: #ffffff;
+  text-decoration: underline; }
+  .result__link:hover {
+    text-decoration: none;
+    opacity: 0.3; }
+  .result__link:active {
+    opacity: 0.6; }
+
+.contacts {
+  width: 100%;
+  min-height: 1223px;
+  margin-top: -153px;
+  background-image: url("../images/bg_footer.jpg");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: top; }
+
+.contacts__container {
+  width: 320px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  padding-top: 266px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column; }
+  @media (min-width: 768px) {
+    .contacts__container {
+      width: 768px; } }
+  @media (min-width: 1170px) {
+    .contacts__container {
+      width: 1170px; } }
 
-/* @import "content";
-@import "slider";
-@import "order";
-@import "footer";
+.contacts__title {
+  margin-bottom: 0;
+  font-family: "RuslanDisplay", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 60px;
+  letter-spacing: 1.3px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: left; }
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 555px;
+  padding-top: 70px; }
+
+.form__input {
+  padding-left: 20px;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-bottom: 1px solid #ffffff; }
+
+.form__btn {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  text-align: center;
+  width: 265px;
+  min-height: 70px;
+  font-size: 24px;
+  color: #ffffff;
+  font-weight: 700;
+  letter-spacing: 0.6px;
+  border: 2px solid #ffffff;
+  background-color: transparent; }
+  .form__btn:hover {
+    color: #000000;
+    background-color: #ffffff; }
+  .form__btn:active {
+    opacity: 0.6; }
+
+/*@import "footer";
 @import "social"; */
