--- a/css/style.css
+++ b/css/style.css
@@ -734,6 +734,7 @@ ul {
 .ideas__title {
   margin-bottom: 0;
   margin-right: 65px;
+  margin-bottom: 20px;
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 48px;
   line-height: 60px;
@@ -742,15 +743,11 @@ ul {
   color: #ffffff;
   text-align: right; }
 
-.swiper-container--2 {
-  width: 1170px;
-  height: auto;
-  background-color: transparent; }
-
-.swiper-slide--text {
+.scroll-pane {
   width: 685px;
+  height: 580px;
   margin-left: auto;
-  padding-right: 100px;
+  margin-right: 30px;
   text-align: right;
   background: transparent;
   display: -webkit-box;
@@ -763,23 +760,24 @@ ul {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  color: #ffffff; }
+  color: #ffffff;
+  overflow-y: scroll; }
 
 .ideas__author {
-  margin: 20px 0 0;
+  margin: 0 20px 0;
   font-size: 24px;
   line-height: 40px;
   font-weight: 700;
   letter-spacing: 0.6px; }
 
 .ideas__text {
-  margin: 0 0 20px;
+  margin: 0 20px 40px 0;
   font-size: 18px;
   line-height: 22px;
   font-weight: 700; }
 
 .ideas__link {
-  margin: 23px 55px 0 auto;
+  margin: 16px 55px 0 auto;
   margin-right: 55px;
   display: block;
   padding-top: 18px;
@@ -797,6 +795,9 @@ ul {
     background-color: #ffffff; }
   .ideas__link:active {
     opacity: 0.6; }
+
+.swiper-container-vertical > .swiper-scrollbar {
+  background-color: #dddddd; }
 
 .team {
   width: 100%;
