--- a/sass/ideas.scss
+++ b/sass/ideas.scss
@@ -27,6 +27,7 @@
 .ideas__title {
   margin-bottom: 0;
   margin-right: 65px;
+  margin-bottom: 20px;
   font-family: $title-font;
   font-size: 48px;
   line-height: 60px;
@@ -36,26 +37,22 @@
   text-align: right;
 }
 
-.swiper-container--2 {
-    width: $desktop-width;
-    height: auto;
-    background-color: transparent;
-}
-
-.swiper-slide--text {
+.scroll-pane {
   width: 685px;
+  height: 580px;
   margin-left: auto;
-  padding-right: 100px;
+  margin-right: 30px;
   text-align: right;
   background: transparent;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   color: #ffffff;
+  overflow-y: scroll;
 }
 
 .ideas__author {
-  margin: 20px 0 0;
+  margin: 0 20px 0;
   font-size: 24px;
   line-height: 40px;
   font-weight: 700;
@@ -63,14 +60,14 @@
 }
 
 .ideas__text {
-  margin: 0 0 20px;;
+  margin: 0 20px 40px 0;
   font-size: 18px;
   line-height: 22px;
   font-weight: 700;
 }
 
 .ideas__link {
-  margin: 23px 55px 0 auto;
+  margin: 16px 55px 0 auto;
   margin-right: 55px;
   display: block;
   padding-top: 18px;
@@ -92,4 +89,8 @@
   &:active {
     opacity: 0.6;
   }
+}
+
+.swiper-container-vertical > .swiper-scrollbar {
+  background-color: #dddddd;
 }
