--- a/sass/stat.scss
+++ b/sass/stat.scss
@@ -41,12 +41,12 @@
   font-family: $title-font;
   font-size: 48px;
   line-height: 40px;
-  color: #ffffff;
+  color: $light-color;
 }
 
 .stat__description {
   font-size: 16px;
-  color: #ffffff;
+  color: $light-color;
   padding: 0;
   text-align: center;
 }
