--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,5 +22,4 @@ Version: 1.0
 @import "result";
 @import "contacts";
 @import "form";
-/*@import "footer";
-@import "social"; */
+@import "footer";
