--- a/css/style.css
+++ b/css/style.css
@@ -453,81 +453,160 @@ ul {
   clip: rect(0 0 0 0);
   overflow: hidden; }
 
+.scroll__arrow-up {
+  width: 70px;
+  height: 70px;
+  background-color: transparent;
+  border: 5px solid red;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  outline: none; }
+  .scroll__arrow-up:hover {
+    opacity: 0.6; }
+  .scroll__arrow-up:active {
+    opacity: 0.3; }
+  .scroll__arrow-up::after {
+    content: "";
+    display: block;
+    position: fixed;
+    bottom: 48px;
+    right: 52px;
+    width: 20px;
+    height: 20px;
+    border-top: 5px solid red;
+    border-left: 5px solid red;
+    border-radius: 3px;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+
 .header {
+  padding-top: 12px;
   width: 100%;
   min-height: 800px;
   background-image: url("../images/bg_header.jpg");
   background-repeat: no-repeat;
   background-size: auto; }
 
+.header__top {
+  margin: 0 auto;
+  width: 320px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  @media (min-width: 1170px) {
+    .header__top {
+      width: 1170px; } }
+
 .header__panel {
   width: 320px;
-  margin: 0 auto;
-  padding: 35px 15px;
+  height: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between; }
-  @media (min-width: 768px) {
-    .header__panel {
-      width: 768px; } }
+  .header__panel .header__toggle {
+    width: 25px;
+    height: 25px;
+    background-color: #ffffff; }
   @media (min-width: 1170px) {
     .header__panel {
-      width: 1170px; } }
+      width: 300px;
+      height: 60px;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end; }
+      .header__panel .header__toggle {
+        display: none; } }
 
-.header__menu {
-  margin-left: auto; }
+.header__logo {
+  width: 145px;
+  height: 30px;
+  border: 3px solid #f3f1f4; }
+  @media (min-width: 1170px) {
+    .header__logo {
+      width: 263px;
+      height: 58px; } }
+
+@media (min-width: 1170px) {
+  .header__menu {
+    margin-left: auto;
+    -ms-flex-item-align: end;
+        align-self: flex-end; } }
 
 .header__title {
   margin-top: 78px;
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 72px;
-  line-height: 60px;
-  letter-spacing: 2px;
+  line-height: 55px;
   text-transform: uppercase;
   color: #f3f1f4;
   text-align: center; }
 
 .header__intro {
-  width: 900px;
+  width: 920px;
   min-height: 202px;
   margin: 0 auto;
   color: #f3f1f4;
   font-family: "ProximaNova", "Arial", sans-serif;
   font-size: 30px;
   line-height: 45px;
-  letter-spacing: 0.8px;
+  font-weight: 700;
   text-align: center; }
 
 .menu {
-  min-height: 50px;
+  margin: 0 auto;
   background-color: transparent;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center; }
+  @media (min-width: 1170px) {
+    .menu {
+      min-height: 50px;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; } }
 
 .menu-item {
-  margin: 0 11px;
+  margin: 0 8px;
   font-size: 24px;
   line-height: 60px;
-  font-weight: 400; }
+  letter-spacing: 0.5;
+  font-weight: 700; }
+  .menu-item:last-child {
+    margin-right: 0; }
 
-.menu-item a {
+.menu__link {
   color: #f3f1f4; }
-  .menu-item a:hover {
-    color: rgba(255, 255, 255, 0.6); }
-  .menu-item a:active {
-    color: rgba(255, 255, 255, 0.3); }
+  .menu__link:hover {
+    color: rgba(255, 255, 255, 0.6);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.6); }
+  .menu__link:active {
+    color: rgba(255, 255, 255, 0.3);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.3); }
 
 .about {
   width: 100%;
@@ -540,7 +619,6 @@ ul {
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 48px;
   line-height: 60px;
-  letter-spacing: 2px;
   text-transform: uppercase;
   color: #282828;
   text-align: center; }
@@ -583,9 +661,8 @@ ul {
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 48px;
   line-height: 60px;
-  letter-spacing: 1.3px;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #f3f1f4;
   text-align: left; }
 
 .tasks__intro,
@@ -598,7 +675,7 @@ ul {
   font-size: 24px;
   line-height: 24px;
   letter-spacing: 0.5px;
-  color: #ffffff;
+  color: #f3f1f4;
   text-align: left; }
 
 .tasks__intro {
@@ -662,7 +739,6 @@ ul {
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 48px;
   line-height: 60px;
-  letter-spacing: 1.8px;
   text-transform: uppercase;
   color: #282828;
   text-align: center; }
@@ -703,11 +779,22 @@ ul {
 .swiper-slide--slide4 {
   background-image: url("../images/yarich.jpg"); }
 
-.swiper-button-next--1 {
-  right: 0; }
+.swiper-button-next--1,
+.swiper-button-prev--1 {
+  width: 20px;
+  height: 35px;
+  background-repeat: no-repeat; }
+  .swiper-button-next--1:hover,
+  .swiper-button-prev--1:hover {
+    opacity: 0.5; }
 
 .swiper-button-prev--1 {
-  left: 0; }
+  left: 0;
+  background-image: url("../images/left-arrow.svg"); }
+
+.swiper-button-next--1 {
+  right: 0;
+  background-image: url("../images/right-arrow.svg"); }
 
 .ideas {
   width: 100%;
@@ -738,9 +825,8 @@ ul {
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 48px;
   line-height: 60px;
-  letter-spacing: 1.3px;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #f3f1f4;
   text-align: right; }
 
 .scroll-pane {
@@ -760,7 +846,7 @@ ul {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  color: #ffffff;
+  color: #f3f1f4;
   overflow-y: scroll; }
 
 .ideas__author {
@@ -785,19 +871,16 @@ ul {
   width: 288px;
   min-height: 70px;
   font-size: 24px;
-  color: #ffffff;
+  color: #f3f1f4;
   font-weight: 700;
   letter-spacing: 0.6px;
-  border: 2px solid #ffffff;
+  border: 2px solid #f3f1f4;
   background-color: transparent; }
   .ideas__link:hover {
-    color: #000000;
-    background-color: #ffffff; }
+    color: #282828;
+    background-color: #f3f1f4; }
   .ideas__link:active {
     opacity: 0.6; }
-
-.swiper-container-vertical > .swiper-scrollbar {
-  background-color: #dddddd; }
 
 .team {
   width: 100%;
@@ -824,9 +907,8 @@ ul {
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 48px;
   line-height: 60px;
-  letter-spacing: 1.3px;
   text-transform: uppercase;
-  color: #000000;
+  color: #282828;
   text-align: center; }
 
 .swiper-slide--member {
@@ -840,21 +922,66 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center; }
+  .swiper-slide--member:hover .team__social {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.6); }
 
 .team__name {
   margin: 13px 0 0;
   font-size: 26px;
   font-weight: 700;
-  color: #000000; }
+  color: #282828; }
 
 .team__post {
   font-size: 18px;
   font-weight: 400;
-  color: #000000; }
+  color: #282828; }
 
 .swiper-button-prev--3,
 .swiper-button-next--3 {
-  top: 40%; }
+  width: 20px;
+  height: 35px;
+  top: 40%;
+  background-repeat: no-repeat; }
+  .swiper-button-prev--3:hover,
+  .swiper-button-next--3:hover {
+    opacity: 0.5; }
+
+.swiper-button-next--3 {
+  right: 0;
+  background-image: url("../images/right-arrow.svg"); }
+
+.swiper-button-prev--3 {
+  left: 0;
+  background-image: url("../images/left-arrow.svg"); }
+
+team__photo {
+  display: block;
+  position: relative;
+  border-radius: 50%; }
+
+.team__social {
+  width: 263px;
+  height: 263px;
+  padding: 20px;
+  border-radius: 50%;
+  display: none;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 0;
+  left: 47px; }
+
+.social__link:hover {
+  opacity: 0.6; }
+
+.social__link:active {
+  opacity: 0.3; }
 
 .stat {
   width: 100%;
@@ -909,11 +1036,11 @@ ul {
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 48px;
   line-height: 40px;
-  color: #ffffff; }
+  color: #f3f1f4; }
 
 .stat__description {
   font-size: 16px;
-  color: #ffffff;
+  color: #f3f1f4;
   padding: 0;
   text-align: center; }
 
@@ -931,9 +1058,8 @@ ul {
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 48px;
   line-height: 48px;
-  letter-spacing: 1.3px;
   text-transform: uppercase;
-  color: #000000;
+  color: #282828;
   text-align: center; }
 
 .swiper-container--4 {
@@ -953,8 +1079,8 @@ ul {
   width: 585px;
   height: 467px;
   padding: 60px 100px;
-  background-color: #000000;
-  color: #ffffff; }
+  background-color: #282828;
+  color: #f3f1f4; }
 
 .result__name {
   margin: 0;
@@ -971,13 +1097,27 @@ ul {
 .result__link {
   font-size: 18px;
   font-weight: 300;
-  color: #ffffff;
+  color: #f3f1f4;
   text-decoration: underline; }
   .result__link:hover {
     text-decoration: none;
     opacity: 0.3; }
   .result__link:active {
     opacity: 0.6; }
+
+.swiper-button-next--4,
+.swiper-button-prev--4 {
+  width: 20px;
+  height: 35px;
+  background-repeat: no-repeat; }
+
+.swiper-button-prev--4 {
+  left: 0;
+  background-image: url("../images/left-arrow-red.svg"); }
+
+.swiper-button-next--4 {
+  right: 0;
+  background-image: url("../images/right-arrow-red.svg"); }
 
 .contacts {
   width: 100%;
@@ -994,6 +1134,7 @@ ul {
   padding-right: 15px;
   margin: 0 auto;
   padding-top: 266px;
+  padding-bottom: 90px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1013,10 +1154,33 @@ ul {
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 48px;
   line-height: 60px;
-  letter-spacing: 1.3px;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #f3f1f4;
   text-align: left; }
+
+.contacts__data {
+  margin: 20px 0 0;
+  font-size: 24px;
+  color: #f3f1f4;
+  text-transform: uppercase;
+  font-weight: bold; }
+  .contacts__data--email {
+    text-transform: none;
+    margin-bottom: 65px; }
+  .contacts__data--social {
+    font-size: 30px;
+    text-transform: none; }
+  .contacts__data a {
+    color: #f3f1f4; }
+    .contacts__data a:hover {
+      opacity: 0.6;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.6); }
+    .contacts__data a:active {
+      opacity: 0.3;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.3); }
+
+.contacts__icon {
+  margin-right: 20px; }
 
 .form {
   display: -webkit-box;
@@ -1027,15 +1191,16 @@ ul {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 555px;
-  padding-top: 39px; }
+  padding-top: 39px;
+  margin-bottom: 45px; }
 
 .form__input {
   height: 53px;
   padding-left: 20px;
-  color: #ffffff;
+  color: #f3f1f4;
   background-color: transparent;
   border: 1px solid transparent;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #f3f1f4;
   font-size: 18px;
   line-height: 60px;
   outline: none; }
@@ -1051,15 +1216,15 @@ ul {
   font-size: 14px; }
 
 .form__input:focus + .form__label {
-  color: #ffffff; }
+  color: #f3f1f4; }
 
 .form__textarea {
   margin-top: 30px;
   padding-left: 20px;
-  color: #ffffff;
+  color: #f3f1f4;
   background-color: #101010;
   border: 1px solid transparent;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #f3f1f4;
   font-size: 18px;
   line-height: 40px;
   outline: none; }
@@ -1071,7 +1236,7 @@ ul {
   margin-bottom: 20px; }
 
 .form__textarea:focus + .form__label {
-  color: #ffffff; }
+  color: #f3f1f4; }
 
 .form__btn {
   -ms-flex-item-align: start;
@@ -1082,16 +1247,54 @@ ul {
   width: 265px;
   min-height: 70px;
   font-size: 24px;
-  color: #ffffff;
+  color: #f3f1f4;
   font-weight: 700;
   letter-spacing: 0.6px;
-  border: 2px solid #ffffff;
+  border: 2px solid #f3f1f4;
   background-color: transparent; }
   .form__btn:hover {
-    color: #000000;
-    background-color: #ffffff; }
+    color: #282828;
+    background-color: #f3f1f4; }
   .form__btn:active {
     opacity: 0.6; }
 
-/*@import "footer";
-@import "social"; */
+.footer {
+  min-height: 30px;
+  background-color: #181818; }
+
+.footer__container {
+  width: 320px;
+  padding: 5px 15px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  @media (min-width: 768px) {
+    .footer__container {
+      width: 768px; } }
+  @media (min-width: 1170px) {
+    .footer__container {
+      width: 1170px; } }
+
+.footer__copyright,
+.footer__creator,
+.footer__link {
+  font-size: 14px;
+  color: #f3f1f4;
+  margin-right: 20px; }
+
+.footer__copyright {
+  margin-right: auto; }
+
+.footer__link {
+  text-decoration: underline; }
+  .footer__link:hover {
+    opacity: 0.6; }
+  .footer__link:active {
+    opacity: 0.3; }
