--- a/sass/form.scss
+++ b/sass/form.scss
@@ -3,15 +3,16 @@
   flex-direction: column;
   width: 555px;
   padding-top: 39px;
+  margin-bottom: 45px;
 }
 
 .form__input {
   height: 53px;
   padding-left: 20px;
-  color: #ffffff;
+  color: $light-color;
   background-color: transparent;
   border: 1px solid transparent;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid $light-color;
   font-size: 18px;
   line-height: 60px;
   outline: none;
@@ -33,16 +34,16 @@
 }
 
 .form__input:focus +  .form__label {
-  color: #ffffff;
+  color: $light-color;
 }
 
 .form__textarea {
   margin-top: 30px;
   padding-left: 20px;
-  color: #ffffff;
+  color: $light-color;
   background-color: #101010;
   border: 1px solid transparent;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid $light-color;
   font-size: 18px;
   line-height: 40px;
   outline: none;
@@ -58,7 +59,7 @@
 }
 
 .form__textarea:focus +  .form__label {
-  color: #ffffff;
+  color: $light-color;
 }
 
 .form__btn {
@@ -69,15 +70,15 @@
   width: 265px;
   min-height: 70px;
   font-size: 24px;
-  color: #ffffff;
+  color: $light-color;
   font-weight: 700;
   letter-spacing: 0.6px;
-  border: 2px solid #ffffff;
+  border: 2px solid $light-color;
   background-color: transparent;
 
   &:hover {
-    color: #000000;
-    background-color: #ffffff;
+    color: $darktext-color;
+    background-color: $light-color;
   }
 
   &:active {
