--- a/sass/ideas.scss
+++ b/sass/ideas.scss
@@ -31,9 +31,8 @@
   font-family: $title-font;
   font-size: 48px;
   line-height: 60px;
-  letter-spacing: 1.3px;
   text-transform: uppercase;
-  color: #ffffff;
+  color: $light-color;
   text-align: right;
 }
 
@@ -47,7 +46,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  color: #ffffff;
+  color: $light-color;
   overflow-y: scroll;
 }
 
@@ -75,22 +74,18 @@
   width: 288px;
   min-height: 70px;
   font-size: 24px;
-  color: #ffffff;
+  color: $light-color;
   font-weight: 700;
   letter-spacing: 0.6px;
-  border: 2px solid #ffffff;
+  border: 2px solid $light-color;
   background-color: transparent;
 
   &:hover {
-    color: #000000;
-    background-color: #ffffff;
+    color: $darktext-color;
+    background-color: $light-color;
   }
 
   &:active {
     opacity: 0.6;
   }
-}
-
-.swiper-container-vertical > .swiper-scrollbar {
-  background-color: #dddddd;
 }
