--- a/sass/tasks.scss
+++ b/sass/tasks.scss
@@ -29,9 +29,8 @@
   font-family: $title-font;
   font-size: 48px;
   line-height: 60px;
-  letter-spacing: 1.3px;
   text-transform: uppercase;
-  color: #ffffff;
+  color: $light-color;
   text-align: left;
 }
 
@@ -45,7 +44,7 @@
   font-size: 24px;
   line-height: 24px;
   letter-spacing: 0.5px;
-  color: #ffffff;
+  color: $light-color;
   text-align: left;
 }
 
